--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,15 @@
   width: 325px;
 }
 
+.wrapper{
+  padding: 20px;
+}
+
+.login-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 
 @media screen and (min-width: 368px) {
