--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,18 @@
   width: 100vw;
 }
 
+.updated-disabled {
+  cursor: not-allowed !important;
+}
+
+
+.profile{
+  max-width: 600px ;
+  width: auto;
+  margin: 20px;
+  padding: 20px;
+}
+
 @media screen and (min-width: 368px) {
   .book {
     width: 500px;
